pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: dev
  labels:
    app: web
spec:
  containers:
    - name: redis
      image: redis
