Service-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
    type: front-end
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008

#selector properties are taken from the Pod metadata - labels section
